--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/router": "7.1.0",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
+        "webpack-dev-server": ">=3.1.11",
         "chart.js": "2.7.3",
         "core-js": "2.5.7",
         "hammerjs": "2.0.8",
@@ -35,7 +36,7 @@
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.10.6",
+        "@angular-devkit/build-angular": "^0.12.1",
         "@angular/cli": "7.0.6",
         "@angular/compiler-cli": "7.1.0",
         "@angular/language-service": "7.1.0",
