--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "7.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --progress",
+        "start": "ng serve --proxy-config proxy.conf.json",
         "build": "ng build --prod",
         "gitbuild": "ng build --prod --base-href /start-javascript/sb-admin-material/master/dist/",
         "test": "ng test",
@@ -24,21 +24,26 @@
         "@angular/platform-browser": "7.1.0",
         "@angular/platform-browser-dynamic": "7.1.0",
         "@angular/router": "7.1.0",
+        "@fortawesome/angular-fontawesome": "^0.3.0",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
-        "webpack-dev-server": ">=3.1.11",
+        "angular-font-awesome": "^3.1.2",
+        "angularx-social-login": "^1.2.6",
+        "bootstrap": "^4.3.1",
         "chart.js": "2.7.3",
         "core-js": "2.5.7",
+        "font-awesome": "^4.7.0",
         "hammerjs": "2.0.8",
         "ng2-charts": "1.6.0",
         "rxjs": "6.3.3",
         "web-animations-js": "2.3.1",
+        "webpack-dev-server": ">=3.1.11",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.12.1",
+        "@angular-devkit/build-angular": "^0.13.4",
         "@angular/cli": "7.0.6",
-        "@angular/compiler-cli": "7.1.0",
+        "@angular/compiler-cli": "^7.2.7",
         "@angular/language-service": "7.1.0",
         "@types/jasmine": "3.3.0",
         "@types/jasminewd2": "2.0.6",
