--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-material:build"
+            "browserTarget": "ng-material:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
