--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
         "ng2-charts": "1.6.0",
         "rxjs": "6.3.3",
         "web-animations-js": "2.3.1",
-        "webpack-dev-server": ">=3.1.11",
+        "webpack-dev-server": "^3.2.1",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.4",
+        "@angular-devkit/build-angular": "^0.13.7",
         "@angular/cli": "7.0.6",
-        "@angular/compiler-cli": "^7.2.7",
+        "@angular/compiler-cli": "^7.2.11",
         "@angular/language-service": "7.1.0",
         "@types/jasmine": "3.3.0",
         "@types/jasminewd2": "2.0.6",
